modules/sg/main.tf
resource "aws_security_group" "sg" {
  name        = "SSH_RDP_HTTP_HTTPS"
  description = "Security group for SSH, RDP, HTTPS, and HTTP traffic"
  vpc_id      = var.vpc_id

  # Allow SSH (port 22)
  ingress {
    description      = "Allow SSH traffic"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  # Allow RDP (port 3389)
  ingress {
    description      = "Allow RDP traffic"
    from_port        = 3389
    to_port          = 3389
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  # Allow HTTPS (port 443)
  ingress {
    description      = "Allow HTTPS traffic"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  # Allow HTTP (port 80)
  ingress {
    description      = "Allow HTTP traffic"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = var.default_tags
}

output "security_group_id" {
  value = aws_security_group.sg.id
}
